# garden

./: .gitignore  CMakeLists.txt  MNEMONICS  NOTICE  README.md  TODO.txt  basic.frag.glsl  basic.vert.glsl  build.bat  build.py  build_clean.bat  demo-tilemap.aseprite  demo.tilemap.tp  hbuild.py  tasks.py  topdown.cpp  topdown_atlas.aseprite  topdown_bmp_importer_test.aseprite
assets/: basic.frag.glsl  basic.sl  basic.vert.glsl  demo-tilemap.aseprite  demo.tilemap.tp  garden_atlas.aseprite
code/: gameplay.cpp  gameplay.h  garden.cpp  garden_gameplay.cpp  garden_gameplay.h  garden_memory.cpp  garden_platform.cpp  garden_platform.h  garden_platform_win32.cpp  garden_runtime.cpp  garden_runtime.h  garden_runtime_win32.cpp  platform.h
code/base/: macros.h  memory.h  static_assert.h  str.h  str_view.h  types.h
code/media/: aseprite.cpp  aseprite.h
docs/: header.sample.c
docs/templates/: header.h
glad/: glad.c
glad/glad/: glad.h
nocheck/: README.md  TODO
nocheck/examples/: 01-basic.c
nocheck/include/nocheck/: nocheck.h
nostdlib/: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat  build.py  tasks.py  testbed.c
nostdlib/noc/include/noc/: bits.h  buf.h  char.h  check.h  debug.h  detect.h  http.h  io.h  macros.h  memory.h  net.h  noc.h  platform.h  static_assert.h  str.h  types.h  version.h
nostdlib/noc/include/noc/math/: mod.h  round.h
nostdlib/noc/include/noc/numeric/: abs.h  countdigits.h  flt_charcount.h  from_str.h  to_str.h
nostdlib/noc/src/: abs.c  buf.c  countdigits.c  flt_charcount.c  from_str.c  http.c  io.c  memory.c  platform.c  platform_linux.c  platform_win32.c  str.c  to_str.c
nostdlib/noc/tests/: test_memory.c
